--- a/src/common.blocks/_footer.scss
+++ b/src/common.blocks/_footer.scss
@@ -6,10 +6,8 @@
   padding: 120px 60px 110px;
   border-top: 1px solid rgba(0, 0, 0, 0.5);
   width: 100%;
-}
 
-@media screen and (max-width: 768px) {
-  .footer {
+  @media screen and (max-width: 768px) {
     padding-top: 70px;
     padding-bottom: 70px;
     justify-content: space-between;
@@ -49,11 +47,11 @@
   font-family: inherit;
 
   transition: 0.2s color ease;
-}
 
-.footer__menu-link:hover {
-  color: $accent-color;
-  transition: 0.2s color ease;
+  &:hover {
+    color: $accent-color;
+    transition: 0.2s color ease;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -73,10 +71,8 @@
 
 .footer__languages-item:not(:last-child) {
   margin-bottom: 10px;
-}
 
-@media screen and (max-width: 450px) {
-  .footer__languages-item:not(:last-child) {
+  @media screen and (max-width: 450px) {
     margin-bottom: 0;
     margin-right: 20px;
   }
